Changed how Classutil.openBrowser() opens the browser